# Pocket_DJ

./: .gitignore  LICENSE  ML_System_Design_Doc.md  Makefile  README.md  najt_work_in_progress.ipynb  pyproject.toml  setup.py
.dvc/: config
data/fma_metadata/: .gitignore  tracks.csv.dvc
data/interim/: features.csv.dvc
designdoc/: ML_System_Design_Doc.md
docs/: conf.py
models/: lgbm_model.pkl  logreg_model.pkl  nn_model.pkl
notebooks/: ggg.csv  najt_work_in_progress.ipynb  test_1.py
src/: config.py
src/data/: data_utils.py
src/features/: annet_features_test.py  features.py
