[tool.poetry]
name = "pocket-dj"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pocket_dj"}]

[tool.poetry.dependencies]
python = "^3.9"
librosa = "^0.10.1"
pandas = "^2.1.0"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"
utils = "^1.0.1"
pydot = "^1.4.2"
tqdm = "^4.66.1"
catboost = "^1.2.1"
llvmlite= "^0.40.1"
#torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.0.1%2Bcpu-cp39-cp39-win_amd64.whl"}
torch = "^2.0.0"
xgboost = "^2.0.0"
lightgbm = "^4.1.0"
dvc = "^3.22.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
